# django-model-subquery

./: LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  isort.yml
src/modelsubquery/: __init__.py  functions.py
testproject/testapp/: models.py  tests.py
testproject/testapp/migrations/: 0001_initial.py
testproject/testproject/: settings.py
